--- a/style.css
+++ b/style.css
@@ -1,28 +1,73 @@
-* {
-  padding: 0;
-  margin: 0;
+@media only screen and (max-width: 650px) {
+  * {
+    padding: 0;
+    margin: 0;
+  }
+  body,
+  html {
+    background-color: rgb(125, 47, 198);
+    display: flex;
+    justify-content: center;
+  }
+  .div1 {
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    margin: auto;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+  }
+  .div0 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    background-color: bisque;
+  }
+  .imgs {
+    width: 100%;
+    /* margin: auto; */
+    height: 30vh;
+    object-fit: cover;
+  }
 }
-body,
-html {
-  background-color: rgb(125, 47, 198);
-  display: flex;
-  justify-content: center;
-}
-.div1 {
-  width: 100%;
-  height: 100vh;
-  display: grid;
-  margin: auto;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
-}
-.div0 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  height: 100vh;
-  width: 100vw;
-  justify-content: center;
-  background-color: bisque;
+
+@media only screen and (min-width: 651px) {
+  * {
+    padding: 0;
+    margin: 0;
+  }
+  body,
+  html {
+    background-color: rgb(125, 47, 198);
+    display: flex;
+    justify-content: center;
+  }
+  .div1 {
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    margin: auto;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+  }
+  .div0 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    background-color: bisque;
+  }
+  .imgs {
+    width: 100%;
+    /* margin: auto; */
+    object-fit: cover;
+    height: 30vh;
+  }
 }
