--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
   .imgs {
     width: 100%;
     /* margin: auto; */
-    object-fit: cover;
+    object-fit: 100% 100%;
     height: 30vh;
   }
 }
